nexus-collections/tests/ui/cannot_alias_cursor_while_holding_ref.stderr
error[E0502]: cannot borrow `list` as mutable because it is also borrowed as immutable
  --> tests/ui/cannot_alias_cursor_while_holding_ref.rs:19:23
   |
19 |     list.read(&slot1, |_data1| {
   |     ---- ----         ^^^^^^^^ mutable borrow occurs here
   |     |    |
   |     |    immutable borrow later used by call
   |     immutable borrow occurs here
20 |         // ERROR: cannot borrow `list` as mutable because it is also borrowed as immutable
21 |         let mut cursor = list.cursor();
   |                          ---- second borrow occurs due to use of `list` in closure
